# ZKMedShard

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/middleware/: jwt.rs
backend/src/models/: claim.rs  medical_claim.rs  mod.rs  user.rs
backend/src/routes/: auth.rs  claim.rs  health.rs  mod.rs  proof.rs
backend/src/services/: blockchain.rs  db.rs  mod.rs  storage.rs  zk_snark.rs
backend/src/utils/: constants.rs  crypto.rs  mod.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: Nav.tsx  PrivateRoute.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Dashboard.tsx  DoctorVerify.tsx  Login.tsx
frontend/src/services/: api.ts  auth.ts
scripts/: deploy_contract.sh  start_backend.sh
smart-contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
smart-contracts/contracts/: MedShard.sol  Verifier.sol
smart-contracts/scripts/: deploy.ts
smart-contracts/tasks/: export-verifier.ts
smart-contracts/test/: MedShard.e2e.ts
zk-proofs/: package-lock.json  package.json
zk-proofs/circuits/: claim_verification.circom
zk-proofs/inputs/: input.json
zk-proofs/scripts/: clean.js  compile.js  export-verifier.js  make-input.js  paths.js  prove.js  setup.js  utils.js  verify.js
