[package]
name = "zk-medshard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Logging
env_logger = "0.11"
log = "0.4"

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }

# Environment variables
dotenv = "0.15"

# Cryptography
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Shared state & storage
once_cell = "1.19"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Blockchain & SCALE
parity-scale-codec = { version = "3", features = ["derive"] }
scale-info = { version = "2", features = ["derive"] }
ink-metadata = "4.3.0"

subxt = "0.32"
sp-keyring = "0.10"
scale = { package = "parity-scale-codec", version = "3.6", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
dotenvy = "0.15"
