[package]
name = "zkmedshard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# runtime
tokio = { version = "1", features = ["full"] }

# web framework (axum 0.6 works with hyper 0.14)
axum = "0.6"

# tower-http compatible with hyper 0.14 / axum 0.6
tower-http = { version = "0.3", features = ["cors"] }

# explicitly use hyper 0.14 so the whole tree uses a single hyper
hyper = { version = "0.14", features = ["server"] }

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

# env vars
dotenvy = "0.15"

# mongodb
mongodb = "3.4.1"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# time
chrono = { version = "0.4", features = ["serde"] }

# JWT
jsonwebtoken = "9"

# ethereum stack
ethers = { version = "2", features = ["abigen", "rustls"] }

# misc
rand = "0.8"
futures-util = "0.3"
